--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@lucid-dreams/agent-kit": "^0.2.8",
+    "tweetnacl": "^1.0.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
