Wire Telegram bot and shared helpers

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@lucid-dreams/agent-kit": "^0.2.8",
+    "grammy": "^1.22.4",
     "tweetnacl": "^1.0.3",
     "x402-fetch": "^0.7.0",
     "zod": "^4.1.12"
